[gd_scene load_steps=19 format=3 uid="uid://dby01h7sl2s4"]

[ext_resource type="Script" path="res://scripts/cannonit.gd" id="1_0q2hu"]
[ext_resource type="PackedScene" uid="uid://cjk1p7lokp2qp" path="res://models/store.blend" id="1_td4n8"]
[ext_resource type="Script" path="res://scripts/fashion_target.gd" id="2_dmnat"]
[ext_resource type="Script" path="res://scripts/cannon.gd" id="3_j811y"]
[ext_resource type="Texture2D" uid="uid://cqwyo6q3wa76i" path="res://sprites/chunk.webp" id="4_y0pqm"]
[ext_resource type="Script" path="res://scripts/results_screen.gd" id="6_31ksq"]
[ext_resource type="LabelSettings" uid="uid://ni61wdkpy3r0" path="res://font/cartoon_label_settings.tres" id="6_mjafa"]
[ext_resource type="Texture2D" uid="uid://6qavvqo82vmh" path="res://sprites/progress_holder.png" id="8_l4kfp"]
[ext_resource type="Texture2D" uid="uid://cunu70nuvkkj5" path="res://sprites/progress_bar.png" id="9_r0uf7"]
[ext_resource type="AudioStream" uid="uid://dqe8sflikwmgy" path="res://sound/splat.mp3" id="10_13cg1"]
[ext_resource type="AudioStream" uid="uid://38a11ky0qb0i" path="res://sound/shotgun.mp3" id="10_urxte"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pu6xc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_20ufk"]
radius = 0.147457
height = 1.49616

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b53mg"]
radius = 0.192287
height = 1.48328

[sub_resource type="SphereShape3D" id="SphereShape3D_g4423"]

[sub_resource type="Animation" id="Animation_sk5l4"]
resource_name = "results_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("txtResults:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(235, 120), Vector2(237, 154)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("txtSexy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(278, 225), Vector2(280, 251)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("txtCasual:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.0333333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(106, 33)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("txtCasual:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.133333, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(272, 339), Vector2(274, 365)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("txtRetro:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(279, 449), Vector2(277, 469)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("txtResults:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(-0.0666667, 0, 0.166667),
"transitions": PackedFloat32Array(1, 1, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("txtSexy:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("txtCasual:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("txtRetro:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("pgSexy:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.3, 0.666667),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(0, 0.2), Vector2(0.24, 0.24)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("pgCasual:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.3, 0.666667),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(0, 0.2), Vector2(0.24, 0.24)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("pgRetro:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0.3, 0.666667),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(0, 0.2), Vector2(0.24, 0.24)]
}

[sub_resource type="Animation" id="Animation_tqk57"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("txtResults:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(235, 142)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("txtSexy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(278, 251)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("txtCasual:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(106, 33)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("txtCasual:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(272, 339)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("txtRetro:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(277, 469)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("txtResults:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("txtSexy:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("txtCasual:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("txtRetro:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("pgSexy:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.24, 0.24)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("pgCasual:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.24, 0.24)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("pgRetro:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.24, 0.24)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uv6ac"]
_data = {
"RESET": SubResource("Animation_tqk57"),
"results_in": SubResource("Animation_sk5l4")
}

[node name="Cannonit" type="Node3D"]
script = ExtResource("1_0q2hu")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.64454, 2.41169)

[node name="store" parent="." instance=ExtResource("1_td4n8")]
visible = false

[node name="FashionTarget" type="Area3D" parent="."]
transform = Transform3D(9.68169, 0, 0, 0, 9.68169, 0, 0, 0, 9.68169, 0, 0, -11.4782)
collision_mask = 3
script = ExtResource("2_dmnat")

[node name="Body" type="CollisionShape3D" parent="FashionTarget"]
shape = SubResource("CapsuleShape3D_pu6xc")

[node name="Arm" type="CollisionShape3D" parent="FashionTarget"]
transform = Transform3D(0.701482, 0.712687, 0, -0.712687, 0.701482, 0, 0, 0, 1, -0.82819, 0.155897, 0)
shape = SubResource("CapsuleShape3D_20ufk")

[node name="Arm2" type="CollisionShape3D" parent="FashionTarget"]
transform = Transform3D(0.730734, -0.682662, 0, 0.682662, 0.730734, 0, 0, 0, 1, 1.00873, 0.14782, 0)
shape = SubResource("CapsuleShape3D_b53mg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="FashionTarget"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65737, 0)
shape = SubResource("SphereShape3D_g4423")

[node name="Sprite3D" type="Sprite3D" parent="FashionTarget"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.98237)
texture = ExtResource("4_y0pqm")

[node name="SplatSFX" type="AudioStreamPlayer" parent="FashionTarget"]
stream = ExtResource("10_13cg1")

[node name="Cannon" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.130775, 1.4389)
script = ExtResource("3_j811y")

[node name="Timer" type="Timer" parent="Cannon"]
wait_time = 0.1
autostart = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.803369, 0, -0.595482, 0.265442, 0.895152, 0.35811, 0.533047, -0.44576, 0.719137, 0, 6.54859, 0)

[node name="JudgementTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="ResultsScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_31ksq")

[node name="txtResults" type="Label" parent="ResultsScreen"]
offset_left = 237.0
offset_top = 154.0
offset_right = 355.0
offset_bottom = 187.0
theme_override_colors/font_color = Color(0.678328, 0.255906, 0.217448, 1)
text = "Results!"
label_settings = ExtResource("6_mjafa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ResultsScreen"]
libraries = {
"": SubResource("AnimationLibrary_uv6ac")
}

[node name="txtSexy" type="Label" parent="ResultsScreen"]
layout_mode = 0
offset_left = 280.0
offset_top = 251.0
offset_right = 345.0
offset_bottom = 284.0
text = "Sexy"
label_settings = ExtResource("6_mjafa")

[node name="txtCasual" type="Label" parent="ResultsScreen"]
layout_mode = 0
offset_left = 274.0
offset_top = 365.0
offset_right = 380.0
offset_bottom = 398.0
text = "Casual"
label_settings = ExtResource("6_mjafa")

[node name="txtRetro" type="Label" parent="ResultsScreen"]
layout_mode = 0
offset_left = 277.0
offset_top = 469.0
offset_right = 351.0
offset_bottom = 502.0
text = "Retro
"
label_settings = ExtResource("6_mjafa")

[node name="pgSexy" type="TextureProgressBar" parent="ResultsScreen"]
layout_mode = 0
offset_left = 419.0
offset_top = 225.0
offset_right = 1419.0
offset_bottom = 579.0
scale = Vector2(0.24, 0.24)
texture_over = ExtResource("8_l4kfp")
texture_progress = ExtResource("9_r0uf7")

[node name="pgCasual" type="TextureProgressBar" parent="ResultsScreen"]
offset_left = 429.0
offset_top = 333.0
offset_right = 1429.0
offset_bottom = 687.0
scale = Vector2(0.24, 0.24)
texture_over = ExtResource("8_l4kfp")
texture_progress = ExtResource("9_r0uf7")

[node name="pgRetro" type="TextureProgressBar" parent="ResultsScreen"]
layout_mode = 0
offset_left = 441.0
offset_top = 438.0
offset_right = 1441.0
offset_bottom = 792.0
scale = Vector2(0.24, 0.24)
texture_over = ExtResource("8_l4kfp")
texture_progress = ExtResource("9_r0uf7")

[node name="ShotgunSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_urxte")
volume_db = -16.0
autoplay = true

[connection signal="body_entered" from="FashionTarget" to="FashionTarget" method="_on_body_entered"]
[connection signal="timeout" from="Cannon/Timer" to="Cannon" method="_on_timer_timeout"]
[connection signal="timeout" from="JudgementTimer" to="." method="_on_judgement_timer_timeout"]
